<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDC39"
    tools:context=".SharedPrefActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sharedPrefEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/button_horizontal_25dp"
        android:layout_marginTop="200dp"
        android:hint="@string/input_text_hint"
        android:textColor="#FF5722"
        android:padding="@dimen/edit_text_padding_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sharedPrefSubmitBtn"
        android:layout_width="221dp"
        android:layout_height="92dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/submit_btn_text"
        app:layout_constraintEnd_toStartOf="@+id/sharedPrefRetrieveBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sharedPrefEditText" />

    <Button
        android:id="@+id/sharedPrefRetrieveBtn"
        android:layout_width="156dp"
        android:layout_height="68dp"
        android:layout_marginTop="12dp"
        android:text="@string/retrieve_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sharedPrefSubmitBtn"
        app:layout_constraintTop_toTopOf="@+id/sharedPrefSubmitBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>