<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4BE36"
    tools:context=".FileStorage">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fileStorageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/button_horizontal_25dp"
        android:layout_marginTop="212dp"
        android:hint="@string/input_text_hint"
        android:textColor="@color/teal_200"
        android:padding="@dimen/edit_text_padding_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fileStorageWriteBtn"
        android:layout_width="124dp"
        android:layout_height="95dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:text="@string/fileStorage_write_btn_text"
        app:layout_constraintEnd_toStartOf="@+id/fileStorageReadBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileStorageEditText" />

    <Button
        android:id="@+id/fileStorageReadBtn"
        android:layout_width="109dp"
        android:layout_height="103dp"
        android:text="@string/fileStorage_read_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

</androidx.constraintlayout.widget.ConstraintLayout>